fix clipping on left side of top row and even everything up

--- a/www/style.css
+++ b/www/style.css
@@ -20,8 +20,8 @@ html, body {
 }
 
 .shiny-split-layout {
-  max-width: 1200px;
-  margin-right: 3px !important;
+  max-width: 1205px;
+  margin-right: 10px !important;
 }
 
 /* box titles */
@@ -157,7 +157,7 @@ html, body {
    justify-content: center !important;
    display: flex;
    flex-direction: column;
-   width: 95%;
+   width: 98%;
  }
  
  #data_update > div:hover {
@@ -167,7 +167,7 @@ html, body {
  #data_update > div {
    color: #2E4052 !important;
    background-color: white !important;
-   margin-left: 1.5px !important;
+   margin-left: 8px !important;
  }
  
   #data_update > div > div {
@@ -192,7 +192,7 @@ html, body {
  /* database icon */
  #data_update > div > div.icon-large {
    right: 2vh; 
-   top: -1vh; 
+   top: -0.8vh; 
    font-size: 38px;
    color: #00A6E1;
    opacity: 0.8;
@@ -215,7 +215,7 @@ html, body {
  }
  
  #target-box {
-   width: 98%;
+   width: 100%;
    max-width: 1230px;
    padding-right: 0;
    padding-left: 0;
